feat: 빌드는 되는데 API에서 데이터가 안내려오는거같음

--- a/app/src/main/res/layout/item_sale.xml
+++ b/app/src/main/res/layout/item_sale.xml
@@ -57,6 +57,7 @@
             android:layout_marginTop="8dp"
             android:maxLines="1"
             tools:text="nameText"
+            android:text="@{item.name}"
             android:ellipsize="end"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
